[components:Select] fix scrollbar not show

--- a/src/native-components/Select/index.scss
+++ b/src/native-components/Select/index.scss
@@ -12,6 +12,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 4px;
+		overflow: auto;
 		align-items: stretch;
 		justify-content: flex-start;
 	}
